# daisycc

./: .dace.conf.ci  .gitignore  README.md  setup.py
.github/workflows/: publish.yml  scop2sdfg_publish.yml  scop2sdfg_tests.yml  tests.yml
driver/: setup.py
driver/driver/: __init__.py
plugin/: CMakeLists.txt  README.md
plugin/lib/: CMakeLists.txt  Daisy.cpp  JScop.cpp  JScop.h  RegisterPasses.cpp  RegisterPasses.h  Scop2SDFG.h
scop2sdfg/: README.md  setup.py
scop2sdfg/scop2sdfg/cli/: __init__.py
scop2sdfg/scop2sdfg/codegen/: generator.py
scop2sdfg/scop2sdfg/ir/: __init__.py  scop.py  undefined_value.py  value.py
scop2sdfg/scop2sdfg/scop/: scop.py
scop2sdfg/tests/ir/: types_test.py  undefined_value_test.py  value_test.py
scop2sdfg/tests/nonaffine/: nonaffine_branch.c  nonaffine_branch_test.py
snap/: snapcraft.yaml
tests/Rodinia/backprop/: Makefile  backpropKernel.c  main.c
tests/miniWeather/: check_output.sh  miniWeather.cpp  miniWeather_test.py
tests/polybench/: polybench_test.py  soap_analysis.py
tests/polybench/2mm/: soap.json
tests/polybench/3mm/: soap.json
tests/polybench/atax/: soap.json
tests/polybench/correlation/: soap.json
tests/polybench/doitgen/: soap.json
tests/polybench/fdtd-2d/: soap.json
tests/polybench/gemm/: soap.json
tests/polybench/gemver/: soap.json
tests/polybench/gesummv/: soap.json
tests/polybench/heat-3d/: soap.json
tests/polybench/jacobi-1d/: soap.json
tests/polybench/jacobi-2d/: soap.json
tests/polybench/matmul/: matmul.c  (+2 more)
tests/unit/: types_test.py  undefined_value_test.py  value_test.py
(+47 files in other folders)
